=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3


=item 1.17_01-dev

make sure ap_config_auto.h is picked up when PREP_HTTPD=1 (for
non-distribution modules that use Apache::src to build)

Fixed "broken" $VERSION's so CPAN won't be confused
[ Ask Bjoern Hansen <ask@netcetera.dk> ]

add some insurance so HTTP_* env variables should always be wiped

fixed $r->finfo bug (properly set PL_laststatval)

PerlRequire/PerlModule will not let the server start if there is an
error (bug introduced in 1.16_xx), thanks to Brian Moseley for the spot

5.005_54+usethreads port [Brian P Millett <bpm@ec-group.com>]

fix -w command line logic for Apache::Registry
[Honza Pazdziora <adelton@informatics.muni.cz>]

$r->connection->aborted now returns the flag as-is (no c->fd test)

fix bug in Apache::ModuleConfig->get($r) when $r isa subclass of Apache

=item 1.17 - January 6, 1999

change silly "Client hit STOP or Netscrape bit it!" message to a more
reasonable message: "[modperl] caught SIGPIPE in process $$"

don't register cleanups with the server-pool if we are a dso

updated CREDITS

internal $Apache::__T variable now properly set again, thanks to Stas
Bekman for the spot

fix so "top-level" Perl{Set,Pass}Env works if Perl is started early

new $r->pnotes method

$ENV{MOD_PERL} is not inherited by subprocesses

no longer use -e with perl_parse()

Apache::ExtUtils will complain if it can't determine the
directive handler prototype (args_how), rather than fail during 'make'

t/TEST =~ s/mod_perl_httpd.pid/httpd.pid 
[Bruce W. Hoylman <bhoylma@advtech.uswest.com>]

use a "%s" format for ap_log_{r}error, so %'s in the log message
string are not treated as format strings

INSTALL updates [Tom Hukins <tom@eborcom.com>]

=item 1.16_02 - November 30, 1998

removed PERLV define, just use patchlevel.h's defines

fix bug w/ push_handlers(PerlCleanupHandler => ...) spotted by 
Jan-Pieter Cornet and Philp Gwyn

remove references to the deprecated CGI::Switch
