@@ -9,8 +9,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - loose @ISA 'DynaLoader' to avoid AutoLoader::AUTOLOAD
 
-- --target=apache + 'make test'
-
 - @PerlSetVar core dumps outside of %Location (Ask)
 
 - turn of strip of httpd in Apache's install.sh
