@@ -9,6 +9,9 @@ Changes - Apache mod_perl change logfile
 
 =item 1.17_01-dev
 
+Makefile.PL will look for --target=(\S+) in APACI_ARGS, if found use
+instead of the default `httpd' for 'make test'
+
 make sure ap_config_auto.h is picked up when PREP_HTTPD=1 (for
 non-distribution modules that use Apache::src to build)
 
